Visibility fix

--- a/Frontend/src/app/features/dashboard/dashboard-home/tracks/card-components/graph-card/graph-card.component.scss
+++ b/Frontend/src/app/features/dashboard/dashboard-home/tracks/card-components/graph-card/graph-card.component.scss
@@ -1,10 +1,10 @@
-.chart-legend:hover {
+.legend-row:hover {
     .delete-legend-btn {
         visibility: visible;
     }
 }
 
-.chart-legend {
+.legend-row {
     .delete-legend-btn {
         visibility: hidden;
     }
